--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "firebase": "^9.6.1",
+    "firebase": "^8.7.1",
+    "firestore": "^1.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
