--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firestore": "^1.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
