--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linkedin-clone",
-  "homepage": "https://diego-1d.github.io/linkedin-clone/",
+  "homepage": "https://diego-1d.github.io/linkedIn-clone/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
